# abysalto-docqa-backend

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  dump.rdb  manual_e2e_test.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_users_documents.py
app/: main.py
app/api/: deps.py
app/api/routes/: ask.py  auth.py  chunk.py  documents.py  embeddings.py  extract.py  health.py  upload.py  vectorstore.py
app/core/: config.py  errors.py  exception_handlers.py  identifiers.py  identity.py  log_safety.py  logging.py  network.py  request_context.py
app/core/middleware/: access_logging.py  request_context.py  request_id.py  security_headers.py  session_identity.py
app/core/security/: jwt.py  passwords.py  session.py
app/db/: base.py  models.py  session.py
app/models/: ask.py  auth.py  chunking.py  document.py  embeddings.py  ner.py  retrieval.py  upload.py
app/repositories/: documents.py  users.py
app/services/: factories.py  interfaces.py  rate_limit.py  redis_client.py
app/services/cache/: cache_keys.py  redis_cache.py
app/services/documents/: __init__.py  metadata.py  pipeline.py
app/services/indexing/: chunking.py  embed_chunks.py  embed_cunks.py  embedding_service.py  faiss_index.py
app/services/ingestion/: image_text.py  ocr.py  pdf_text.py
app/services/ner/: ner_service.py
app/services/qa/: ask_pipeline.py  qa_service.py
app/storage/: chunks.py  dedup.py  embeddings.py  faiss_store.py  files.py  metadata.py  processed.py  upload_registry.py
data/: app.db
docker/: Dockerfile.ui  entrypoint.sh
scripts/: cleanup.sh  cleanup_session_documents.py  manual_test.sh  precommit_check.sh  preload_models.py
tests/: conftest.py  test_ask_integration.py  test_ask_pipeline_structuring.py  test_ask_unit.py  test_ask_validation.py  test_auth.py  test_cache_ask.py  test_chunking.py  test_db_repo.py  test_document_route_ownership.py  test_documents_api.py  test_embeddings.py  test_extract_ocr.py  test_extract_pdf.py  test_faiss_retrieval.py  test_health.py  test_identity_ownership.py  test_logging_tracing.py  test_ner_service.py  test_rate_limit.py  test_request_id_and_errors.py  test_security_hardening.py  test_session_identity.py  test_upload.py
ui/: streamlit_app.py
(+1 files in other folders)
