[tool.poetry]
name = "abysalto-project"
version = "0.1.0"
description = "AI-driven Document Insight Service"
authors = ["Filip Šiktar <filip.siktar@fer.hr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.133.0"
uvicorn = "^0.41.0"
pydantic-settings = "^2.13.1"
python-multipart = "^0.0.22"
pymupdf = "^1.27.1"
easyocr = "^1.7.2"
opencv-python-headless = "^4.13.0.92"
pillow = "^12.1.1"
numpy = "^2.4.2"
sentence-transformers = "^5.2.3"
faiss-cpu = "^1.13.2"
transformers = "^5.2.0"
spacy = "^3.8.11"
redis = "^7.2.1"
argon2-cffi = "^25.1.0"
PyJWT = "^2.10.1"

sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg = {version = "^3.2.3", extras = ["binary"]}
email-validator = "^2.3.0"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"
ruff = "^0.15.2"
black = "^26.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:deprecated:DeprecationWarning",
  "ignore:torch.ao.quantization is deprecated:DeprecationWarning",
  "ignore:'pin_memory' argument is set as true but no accelerator is found:UserWarning",
]

[tool.ruff]
line-length = 100